--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                         <h5 class="card-title">The Original Photo</h5>
                       </div>
                       <div class="card-footer">
-                        <a href="images/Hue.jpg" target="_blank" class="btn btn-primary">View Image</a>
+                        <a href="images/Leaf.jpg" target="_blank" class="btn btn-primary">View Image</a>
                       </div>
                     </div>
                     <div class="card bg-light">
@@ -422,7 +422,7 @@
                         <h5 class="card-title">Brightness with Boundaries Sorting</h5>
                       </div>
                       <div class="card-footer">
-                        <a href="images/Hue.jpg" target="_blank" class="btn btn-primary">View Image</a>
+                        <a href="images/BrightBound.jpg" target="_blank" class="btn btn-primary">View Image</a>
                       </div>
                     </div>
                     <div class="card bg-light">
@@ -431,7 +431,7 @@
                         <h5 class="card-title">Brightness, Spiral, and Partitions Sorting</h5>
                       </div>
                       <div class="card-footer">
-                        <a href="images/Hue.jpg" target="_blank" class="btn btn-primary">View Image</a>
+                        <a href="images/SpiralPart.jpg" target="_blank" class="btn btn-primary">View Image</a>
                       </div>
                     </div>
                     <div class="card bg-light">
