--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                       <li>Rewrite this program to be based on the web using HTML5 and JavaScript</li>
                       <li>Allow the user to have more options for sorting games in their collection, including by genre, publisher, console, release year, ect.</li>
                       <li>Allow the user to track how many hours they have spent playing each individual game</li>
-                      <li>Incorporate data from <a target="_blank" href="howlongtobeat.com">How Long To Beat</a> to be used alongside how much time the user has spent playing each game</li>
+                      <li>Incorporate data from <a target="_blank" href="howlongtobeat.com">HowLongToBeat.com</a> to be used alongside how much time the user has spent playing each game</li>
                       <li>Utilize Steam's API to allow the user to import their games from their Steam libraries, then interface with GiantBomb to download the appropriate data for each of these titles</li>
                       <li>Create a banner/ribbon that appears over games that are completed</li>
                       <li>Achievement tracking</li>
