--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 
 <header>
@@ -445,7 +447,9 @@
                     </div>
                   </div>
                 </div>
-                
+
+                <a class="github-button" href="https://github.com/stucco11/PixelSort" data-size="large" aria-label="View stucco11/PixelSort on GitHub">View it on GitHub</a>
+
               </li>
                 <li class="list-group-item" id="GameShelf">
                   <p>
