Added Fall Coursework

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                   </div>
 
                   <div class="row">
-                    Cumulative GPA of 2.91 on a 4.0 scale with a major specific GPA of 3.12
+                    Cumulative GPA of 2.93 on a 4.0 scale with a major specific GPA of 3.12
                   </div>
                 </div>
                 <div class="p-2">2017 - Anticipated Grad. in 2021</div>
@@ -255,14 +255,17 @@
               </div>
               
               <ul class="list-group-flush">
-                <li class="list-group-item">200 - Programming I (Fall 2017)</li>
-                <li class="list-group-item">300 - Programming II (Fall 2018)</li>
-                <li class="list-group-item">400 - Programming III (Spring 2019)</li>
-                <li class="list-group-item">240 - Discrete Mathematics (Fall 2019)</li>
-                <li class="list-group-item">559 - Computer Graphics (Fall 2019)</li>
-                <li class="list-group-item">368 - C++ for Java Programmers (Spring 2020)</li>
-                <li class="list-group-item">354 - Machine Organization (Spring 2020)</li>
+                <li class="list-group-item">537 - Intro to Operating Systems (Fall 2020)</li>
+                <li class="list-group-item">540 - Intro to AI (Fall 2020)</li>
+                <li class="list-group-item">435 - Intro to Cryptography (Fall 2020)</li>
                 <li class="list-group-item">577 - Intro to Algorithms (Spring 2020)</li>
+                <li class="list-group-item">354 - Machine Organization (Spring 2020)</li>
+                <li class="list-group-item">368 - C++ for Java Programmers (Spring 2020)</li>
+                <li class="list-group-item">559 - Computer Graphics (Fall 2019)</li>
+                <li class="list-group-item">240 - Discrete Mathematics (Fall 2019)</li>
+                <li class="list-group-item">400 - Programming III (Spring 2019)</li>
+                <li class="list-group-item">300 - Programming II (Fall 2018)</li>
+                <li class="list-group-item">200 - Programming I (Fall 2017)</li>
               </ul>
 
               <div class="d-flex">
@@ -273,10 +276,11 @@
                 </div>
               </div>
               <ul class="list-group-flush">
-                <li class="list-group-item">221 - Calculus 1 (Fall 2018)</li>
-                <li class="list-group-item">222 - Calculus 2 (Spring 2019)</li>
-                <li class="list-group-item">234 - Calculus 3 (Fall 2019)</li>
+                <li class="list-group-item">475 - Combinatorics (Fall 2020)</li>
                 <li class="list-group-item">340 - Linear Algebra (Spring 2020)</li>
+                <li class="list-group-item">234 - Calculus 3 (Fall 2019)</li>
+                <li class="list-group-item">222 - Calculus 2 (Spring 2019)</li>
+                <li class="list-group-item">221 - Calculus 1 (Fall 2018)</li>
               </ul>
             </div>
           </ul>
@@ -298,6 +302,7 @@
                 </div>
               </div>
               <ul class="list-group-flush">
+                <li class="list-group-item">APEX</li>
                 <li class="list-group-item">Java / JavaFX</li>
                 <li class="list-group-item">C#</li>
                 <li class="list-group-item">XAML</li>
@@ -309,13 +314,14 @@
               <div class="d-flex">
                 <div class="col">
                   <div class="row bottom-margin">
-                    <strong>Web Development</strong>
+                    <strong>Web Development / Web Technologies</strong>
                   </div>
                 </div>
               </div>
               <ul class="list-group-flush">
                 <li class="list-group-item">HTML5 / CSS</li>
                 <li class="list-group-item">JavaScript / THREE.js</li>
+                <li class="list-group-item">REST / SOAP</li>
               </ul>
             </div>
             <div class="list-group-item" id="OtherSkills">
@@ -328,6 +334,7 @@
               </div>
               <ul class="list-group-flush">
                 <li class="list-group-item">SQL</li>
+                <li class="list-group-item">SOQL / SOSL</li>
                 <li class="list-group-item">Liquid (Shopify's template language)</li>
               </ul>
             </div>
