--- a/index.html
+++ b/index.html
@@ -94,6 +94,28 @@
         <h2 class="row align-items-center justify-content-center">Work Experience</h2>
         <div class="section top-margin">
           <ul class="list-group">
+            <div class="list-group-item" id="SoftwareDevIntern">
+              <div class="d-flex">
+                <div class="mr-auto p-2">
+                  <div class="col">
+                    <div class="row">
+                      <strong>Software Development Intern</strong>
+                    </div>
+                    <div class="row">
+                      Emelar Consulting Group
+                    </div>
+                  </div>
+                </div>
+                <div class="p-2">July 2020 - Current</div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Meet with internal and/or external clients to determine business, functional and technical requirements</li>
+                <li class="list-group-item">Utilize Apex to perform configuration and customization of the Salesforce platform</li>
+                <li class="list-group-item">Perform administrative tasks with the Salesforce platform</li>
+                <li class="list-group-item">Participate in efforts to develop and execute testing, training, and documentation</li>
+                <li class="list-group-item">Work with a team to ensure the satisfaction of clients during the development stages as well as additional support after development has ceased</li>
+              </ul>
+            </div>
             <div class="list-group-item" id="PostProdAssist">
               <div class="d-flex">
                 <div class="mr-auto p-2">
@@ -255,10 +277,10 @@
               </div>
               
               <ul class="list-group-flush">
-                <li class="list-group-item">537 - Intro to Operating Systems (Fall 2020)</li>
-                <li class="list-group-item">540 - Intro to AI (Fall 2020)</li>
-                <li class="list-group-item">435 - Intro to Cryptography (Fall 2020)</li>
-                <li class="list-group-item">577 - Intro to Algorithms (Spring 2020)</li>
+                <li class="list-group-item">537 - Operating Systems (Fall 2020)</li>
+                <li class="list-group-item">540 - Artificial Intelligence (Fall 2020)</li>
+                <li class="list-group-item">435 - Cryptography (Fall 2020)</li>
+                <li class="list-group-item">577 - Algorithms (Spring 2020)</li>
                 <li class="list-group-item">354 - Machine Organization (Spring 2020)</li>
                 <li class="list-group-item">368 - C++ for Java Programmers (Spring 2020)</li>
                 <li class="list-group-item">559 - Computer Graphics (Fall 2019)</li>
@@ -277,7 +299,7 @@
               </div>
               <ul class="list-group-flush">
                 <li class="list-group-item">475 - Combinatorics (Fall 2020)</li>
-                <li class="list-group-item">340 - Linear Algebra (Spring 2020)</li>
+                <li class="list-group-item">340 - Elementary Matrix and Linear Algebra (Spring 2020)</li>
                 <li class="list-group-item">234 - Calculus 3 (Fall 2019)</li>
                 <li class="list-group-item">222 - Calculus 2 (Spring 2019)</li>
                 <li class="list-group-item">221 - Calculus 1 (Fall 2018)</li>
@@ -303,11 +325,12 @@
               </div>
               <ul class="list-group-flush">
                 <li class="list-group-item">APEX</li>
-                <li class="list-group-item">Java / JavaFX</li>
                 <li class="list-group-item">C#</li>
-                <li class="list-group-item">XAML</li>
-                <li class="list-group-item">WPF (Alongside the MVVM pattern)</li>
                 <li class="list-group-item">C / C++</li>
+                <li class="list-group-item">Java / JavaFX</li>
+                <li class="list-group-item">Python</li>
+                <li class="list-group-item">WPF (Alongside the MVVM pattern)</li>
+                <li class="list-group-item">XAML</li>
               </ul>
             </div>
             <div class="list-group-item" id="WebDev">
@@ -333,9 +356,9 @@
                 </div>
               </div>
               <ul class="list-group-flush">
-                <li class="list-group-item">SQL</li>
-                <li class="list-group-item">SOQL / SOSL</li>
-                <li class="list-group-item">Liquid (Shopify's template language)</li>
+                <li class="list-group-item">LaTeX</li>
+                <li class="list-group-item">Liquid</li>
+                <li class="list-group-item">SQL / SOQL / SOSL</li>
               </ul>
             </div>
             <div class="list-group-item" id="VersionControl">
