Fixed an email link

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
       <div class="container" id="ContactMe">
         <h2 class="row align-items-center justify-content-center">Contact Information</h2>
         <p>
-          <a href="mailto:jdhollander@wisc.edu">jdhollander@wisc.edu</a>
+          <a href="mailto:stuccoeleven@gmail.com">stuccoeleven@gmail.com</a>
         </p>
         <p>
           <a target="_blank" href="https://www.linkedin.com/in/joshua-hollander/">LinkedIn</a>
