--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
               <ul class="list-group-flush">
                 <li class="list-group-item">Utilize Apex, SOQL, and web service technologies to perform configuration and customization of the Salesforce Platform according to the specifications of our clients</li>
-                <li class="list-group-item">Utilize JavaScript, Apex, and Unity to create an expand upon an Employee Portal, allowing employees of Emelar Consulting to see a virtual avatar of themselves alongside statistics, records, and documents that are relevant to them within the company.</li>
+                <li class="list-group-item">Utilize JavaScript, Apex, and Unity to create custom tools and interfaces to better allow our employees to interact with client documents and tracked data.</li>
                 <li class="list-group-item">Perform administrative tasks with the Salesforce platform, including managing changesets, adjusting permission sets for Users, creating custom Objects with specialized and automated interaction with other Objects, creating custom reports connected to automated email surveys, etc.</li>
                 <li class="list-group-item">Participate in efforts to develop and execute testing, training, and documentation of custom work in Salesforce for clients</li>
                 <li class="list-group-item">Work with a team to ensure the satisfaction of clients during the development stages as well as additional support after development has ceased</li>
